fixed code that made all the containers overlap, addded new site

--- a/main.css
+++ b/main.css
@@ -77,10 +77,9 @@ body::-webkit-scrollbar {
 }
 
 .layout .section-stick .active {
-  position: absolute;
-  background-color: aaargba(238, 197, 197, 0.719);
-  box-shadow: 0px 0px 12px 1px var(--color-white);
-
+  .layout .section-stick .active {
+    background-color: rgba(238, 197, 197, 0.719); 
+  }
 
 }
 
@@ -96,7 +95,7 @@ body::-webkit-scrollbar {
   justify-content: center;
   text-align: center;
   color: var(--color-white);
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 600;
   transform: translateY(100vh);
   transition: all var(--time-animation) ease-in-out;
@@ -108,10 +107,9 @@ body::-webkit-scrollbar {
   flex-direction: column;
   row-gap: 45px;
   align-items: center;
-  font-size: 28px;
+  font-size: 28px; 
   justify-content: center;
-  margin-right: 100px;
-  padding-left: 50px;
+  padding-left: 0; 
 }
 
 .link {
@@ -151,6 +149,9 @@ link:visited {
   display: flex;
   flex-direction: column;
   border-bottom: 2px solid #183A37;  
+  align-content: space-between;
+  justify-content: space-evenly;
+  align-items: stretch;
 }
 
 .s3 h3 {
@@ -176,6 +177,8 @@ link:visited {
   justify-content: space-evenly;
   flex-wrap: wrap-reverse;
   border-bottom: 2px solid #183A37;
+  align-content: space-around;
+  font-size: 20px;
 
 }
 
@@ -198,7 +201,7 @@ link:visited {
 
 .passions {
 width: 50%;
-max-height:100%;
+max-height:;
 
 }
 
@@ -212,7 +215,7 @@ max-height:100%;
     flex-wrap: wrap;
    align-content: center;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     text-align: center;
    
     font-family: "Josefin Sans", sans-serif;
@@ -259,12 +262,16 @@ max-height:100%;
   box-shadow: #183a37bd -5px 5px, #214e4ad0 -10px 10px, rgba(19, 168, 168, 0.301) -15px 15px, rgba(240, 46, 170, 0.1) -20px 20px, rgba(46, 240, 230, 0.05) -25px 25px;
 }
 
+
+
 .item-1 {
-  background-image: url("./Capture\ d’écran\ \(118\).png");
+  background-image: url("./Capture\ d’écran\ \(96\).png") ;
 }
 
+
+
 .item-2 {
-  background-image: url("./Capture\ d’écran\ \(96\).png");
+  background-image: url("./Capture\ d’écran\ \(172\).png");
 }
 
 .item-3 {
@@ -600,7 +607,7 @@ a:-webkit-any-link {
   font-weight: 500;
   letter-spacing: 5px;
   transition: 0.5s;
-  padding-right: 100px;
+  padding-right: 80px;
 }
 
 .containerS2right p {
@@ -631,14 +638,17 @@ a:-webkit-any-link {
  flex-direction: row;
  font-size: 22px;
  width: 400px;
- padding: 0;
+ padding-right: 50px;
+ padding-left: 80px;
  margin: 0;
 justify-content: space-around;
 margin-top: 30px;
 
 }
 
-
+.skillsContainer {
+  padding-left: 230px;
+}
 
 .skill1,
 .skill2,
